--- a/Project_2/assets/styles/_header.scss
+++ b/Project_2/assets/styles/_header.scss
@@ -43,6 +43,17 @@ header {
         justify-content: center;
         gap: 30px;
     }
+
+    @media screen and(max-width:900px) {
+        display: flex;
+        align-items: center;
+        justify-content: stretch;
+        background: linear-gradient(360deg, $tertiary-color 0%, $secondary-color 50%, $commerce_background 100%);
+        padding-top: 0;
+        gap: 10px;
+        flex-direction: row;
+    }
+
 }
 
 .header_logo {
@@ -90,6 +101,21 @@ header {
             margin-bottom: 240px;
         }
 
+        @media screen and(max-width:900px) {
+            h2 {
+                font-size: $font_size_5;
+                min-height: 0;
+            }
+
+            h3 {
+                font-size: $font_size_2;
+                min-height: 0;
+            }
+        }
+
+        @media screen and(max-width:900px) {
+            padding-top: 60px;
+        }
     }
 
     .slick-dots {
@@ -120,6 +146,10 @@ header {
                 transition: background-color 0.3s ease;
             }
         }
+
+        @media screen and(max-width:900px) {
+            visibility: hidden;
+        }
     }
 
     .slick-dots button:hover,
@@ -127,8 +157,9 @@ header {
         background-color: $primary-color;
     }
 
-    @media screen and(max-width:1220px) {
-        margin-top: 270px;
+    @media screen and(max-width:900px) {
+        margin-top: 0;
+        padding-top: 150px;
     }
 
 }
@@ -173,5 +204,9 @@ header {
             left: 30%;
             font-size: $font_size_2;
         }
+    }
+
+    @media screen and(max-width:900px) {
+        top: -90px;
     }
 }
