--- a/Project_2/assets/styles/_nav.scss
+++ b/Project_2/assets/styles/_nav.scss
@@ -110,8 +110,7 @@ nav {
     }
 
     @media screen and(max-width:1220px) {
-        margin-left: 35px;
-        margin-bottom: 10px;
+        margin-left: -125px;
     }
 }
 
@@ -143,5 +142,96 @@ nav {
 
     100% {
         transform: scale(1.15);
+    }
+}
+
+//The desgins for the hamburger menus
+
+.hamburger-menu {
+    display: none;
+    flex-direction: column;
+    cursor: pointer;
+    position: absolute;
+    top: 21%;
+    right: 10px;
+    z-index: 45;
+
+    .bar {
+        width: 25px;
+        height: 3px;
+        background-color: $primary_color;
+        margin: 4px 0;
+        transition: 0.4s;
+        border-radius: 4px;
+    }
+}
+
+.bar.hidden {
+    display: none;
+}
+
+.close-button {
+    display: none;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 60px;
+    background: none;
+    border: none;
+    cursor: pointer;
+    color: $primary_color;
+
+    transition: transform 0.3s ease;
+
+    &:hover {
+        transform: translateY(5px);
+    }
+}
+
+@media screen and(max-width:900px) {
+    .hamburger-menu {
+        display: flex;
+    }
+
+    .header_nav {
+        display: none;
+        flex-direction: column;
+        position: fixed;
+        top: 0;
+        right: 0;
+        width: 20%;
+        height: 100vh;
+        background-color: $tertiary-color;
+        padding: 20px;
+        box-shadow: -4px 0 8px rgba(0, 0, 0, 0.1);
+        ;
+        z-index: 44;
+
+        li {
+            display: flex;
+            justify-content: space-evenly;
+            align-self: flex-start;
+        }
+    }
+
+    .header_nav.active {
+        display: flex;
+    }
+
+    .header_nav.active .close-button {
+        display: block;
+    }
+
+    .header_menu {
+        flex-direction: column;
+        gap: 50px;
+        position: relative;
+        top: 30%;
+    }
+}
+
+@media screen and (max-width: 380px) {
+    .header_nav {
+        width: 50%;
     }
 }
