--- a/Project_2/assets/styles/main.css
+++ b/Project_2/assets/styles/main.css
@@ -69,6 +69,17 @@ header {
     gap: 30px;
   }
 }
+@media screen and (max-width: 900px) {
+  .title_bar {
+    display: flex;
+    align-items: center;
+    justify-content: stretch;
+    background: linear-gradient(360deg, #55B7FF 0%, #2c4058 50%, #7E5AFF 100%);
+    padding-top: 0;
+    gap: 10px;
+    flex-direction: row;
+  }
+}
 
 .header_logo {
   max-width: 241px;
@@ -112,6 +123,21 @@ header {
   min-height: 22px;
   margin-bottom: 240px;
 }
+@media screen and (max-width: 900px) {
+  .header_body .slider_heading h2 {
+    font-size: 44px;
+    min-height: 0;
+  }
+  .header_body .slider_heading h3 {
+    font-size: 15px;
+    min-height: 0;
+  }
+}
+@media screen and (max-width: 900px) {
+  .header_body .slider_heading {
+    padding-top: 60px;
+  }
+}
 .header_body .slick-dots {
   position: absolute;
   top: 25%;
@@ -138,13 +164,19 @@ header {
   outline: none;
   transition: background-color 0.3s ease;
 }
+@media screen and (max-width: 900px) {
+  .header_body .slick-dots {
+    visibility: hidden;
+  }
+}
 .header_body .slick-dots button:hover,
 .header_body .slick-dots .slick-active button {
   background-color: #fff;
 }
-@media screen and (max-width: 1220px) {
+@media screen and (max-width: 900px) {
   .header_body {
-    margin-top: 270px;
+    margin-top: 0;
+    padding-top: 150px;
   }
 }
 
@@ -182,6 +214,11 @@ header {
   top: 35%;
   left: 30%;
   font-size: 15px;
+}
+@media screen and (max-width: 900px) {
+  .pointer_down {
+    top: -90px;
+  }
 }
 
 nav {
@@ -281,8 +318,7 @@ nav li:hover a::before {
 }
 @media screen and (max-width: 1220px) {
   .header_icons {
-    margin-left: 35px;
-    margin-bottom: 10px;
+    margin-left: -125px;
   }
 }
 
@@ -310,6 +346,88 @@ nav li:hover a::before {
   }
   100% {
     transform: scale(1.15);
+  }
+}
+.hamburger-menu {
+  display: none;
+  flex-direction: column;
+  cursor: pointer;
+  position: absolute;
+  top: 21%;
+  right: 10px;
+  z-index: 45;
+}
+.hamburger-menu .bar {
+  width: 25px;
+  height: 3px;
+  background-color: #fff;
+  margin: 4px 0;
+  transition: 0.4s;
+  border-radius: 4px;
+}
+
+.bar.hidden {
+  display: none;
+}
+
+.close-button {
+  display: none;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 60px;
+  background: none;
+  border: none;
+  cursor: pointer;
+  color: #fff;
+  transition: transform 0.3s ease;
+}
+.close-button:hover {
+  transform: translateY(5px);
+}
+
+@media screen and (max-width: 900px) {
+  .hamburger-menu {
+    display: flex;
+  }
+
+  .header_nav {
+    display: none;
+    flex-direction: column;
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 20%;
+    height: 100vh;
+    background-color: #55B7FF;
+    padding: 20px;
+    box-shadow: -4px 0 8px rgba(0, 0, 0, 0.1);
+    z-index: 44;
+  }
+  .header_nav li {
+    display: flex;
+    justify-content: space-evenly;
+    align-self: flex-start;
+  }
+
+  .header_nav.active {
+    display: flex;
+  }
+
+  .header_nav.active .close-button {
+    display: block;
+  }
+
+  .header_menu {
+    flex-direction: column;
+    gap: 50px;
+    position: relative;
+    top: 30%;
+  }
+}
+@media screen and (max-width: 380px) {
+  .header_nav {
+    width: 50%;
   }
 }
 .what_we_do {
