--- a/Project_2/assets/styles/_section.css
+++ b/Project_2/assets/styles/_section.css
@@ -4,6 +4,11 @@
   max-width: 1170px;
   margin: 0 auto;
 }
+@media screen and (max-width: 900px) {
+  .what_we_do {
+    width: 100%;
+  }
+}
 
 .what_we_do_title {
   width: 100%;
@@ -35,12 +40,22 @@
   vertical-align: top;
   box-shadow: -260px -57px #55B7FF;
 }
+@media screen and (max-width: 900px) {
+  .projects img {
+    box-shadow: 10px 10px #55B7FF;
+  }
+}
+@media screen and (max-width: 900px) {
+  .projects {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
 
 .project_1,
 .project_2 {
   width: 100%;
-  max-width: 1385px;
-  height: 527px;
 }
 
 .project_1 {
@@ -53,6 +68,15 @@
 .project_1 .project_image {
   width: 100%;
   height: 100%;
+}
+@media screen and (max-width: 900px) {
+  .project_1 {
+    flex-direction: column;
+    margin-bottom: 60px;
+    margin-right: 0;
+    align-items: center;
+    text-align: center;
+  }
 }
 
 .project_details {
@@ -143,6 +167,12 @@
   font-size: 15px;
   font-style: italic;
 }
+@media screen and (max-width: 900px) {
+  .project_details {
+    padding: 0;
+    margin-top: 30px;
+  }
+}
 
 .project_2 {
   display: flex;
@@ -151,6 +181,20 @@
 }
 .project_2 img {
   box-shadow: 260px -57px #7E5AFF;
+}
+@media screen and (max-width: 900px) {
+  .project_2 img {
+    box-shadow: -10px -10px #7E5AFF;
+  }
+}
+@media screen and (max-width: 900px) {
+  .project_2 {
+    flex-direction: column-reverse;
+    gap: 20px;
+    align-items: center;
+    text-align: center;
+    padding-top: 40px;
+  }
 }
 
 #news {
@@ -180,6 +224,11 @@
   max-width: 327px;
   padding-top: 135px;
   text-align: center;
+}
+@media screen and (max-width: 900px) {
+  .news_section_content .news_title {
+    padding-top: 40px;
+  }
 }
 .news_section_content .news_title:before {
   content: "";
@@ -262,7 +311,6 @@
 .article_details {
   width: 100%;
   max-width: 370px;
-  height: 514px;
   display: flex;
   flex-direction: column;
   align-items: center;
