--- a/Project_2/assets/styles/_section.scss
+++ b/Project_2/assets/styles/_section.scss
@@ -5,6 +5,10 @@
     width: 100%;
     max-width: 1170px;
     margin: 0 auto;
+
+    @media screen and(max-width:900px) {
+        width: 100%;
+    }
 }
 
 .what_we_do_title {
@@ -38,14 +42,23 @@
         z-index: 10;
         vertical-align: top;
         box-shadow: -260px -57px $tertiary-color;
+
+        @media screen and(max-width:900px) {
+            box-shadow: 10px 10px $tertiary-color;
+        }
+    }
+
+    @media screen and(max-width:900px) {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 }
 
 .project_1,
 .project_2 {
     width: 100%;
-    max-width: 1385px;
-    height: 527px;
+    // max-width: 1385px;
 }
 
 .project_1 {
@@ -58,6 +71,14 @@
     .project_image {
         width: 100%;
         height: 100%;
+    }
+
+    @media screen and(max-width:900px) {
+        flex-direction: column;
+        margin-bottom: 60px;
+        margin-right: 0;
+        align-items: center;
+        text-align: center;
     }
 }
 
@@ -163,6 +184,11 @@
             font-style: italic;
         }
     }
+
+    @media screen and(max-width:900px) {
+        padding: 0;
+        margin-top: 30px;
+    }
 }
 
 .project_2 {
@@ -172,6 +198,18 @@
 
     img {
         box-shadow: 260px -57px $commerce_background;
+
+        @media screen and(max-width:900px) {
+            box-shadow: -10px -10px $commerce_background;
+        }
+    }
+
+    @media screen and(max-width:900px) {
+        flex-direction: column-reverse;
+        gap: 20px;
+        align-items: center;
+        text-align: center;
+        padding-top: 40px;
     }
 }
 
@@ -202,6 +240,10 @@
         max-width: 327px;
         padding-top: 135px;
         text-align: center;
+
+        @media screen and(max-width:900px) {
+            padding-top: 40px;
+        }
 
         &:before {
             content: "";
@@ -303,7 +345,7 @@
 .article_details {
     width: 100%;
     max-width: 370px;
-    height: 514px;
+    // height: 514px;
     display: flex;
     flex-direction: column;
     align-items: center;
