--- a/Project_2/assets/styles/main.css
+++ b/Project_2/assets/styles/main.css
@@ -436,6 +436,11 @@ nav li:hover a::before {
   max-width: 1170px;
   margin: 0 auto;
 }
+@media screen and (max-width: 900px) {
+  .what_we_do {
+    width: 100%;
+  }
+}
 
 .what_we_do_title {
   width: 100%;
@@ -467,12 +472,22 @@ nav li:hover a::before {
   vertical-align: top;
   box-shadow: -260px -57px #55B7FF;
 }
+@media screen and (max-width: 900px) {
+  .projects img {
+    box-shadow: 10px 10px #55B7FF;
+  }
+}
+@media screen and (max-width: 900px) {
+  .projects {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
 
 .project_1,
 .project_2 {
   width: 100%;
-  max-width: 1385px;
-  height: 527px;
 }
 
 .project_1 {
@@ -485,6 +500,15 @@ nav li:hover a::before {
 .project_1 .project_image {
   width: 100%;
   height: 100%;
+}
+@media screen and (max-width: 900px) {
+  .project_1 {
+    flex-direction: column;
+    margin-bottom: 60px;
+    margin-right: 0;
+    align-items: center;
+    text-align: center;
+  }
 }
 
 .project_details {
@@ -575,6 +599,12 @@ nav li:hover a::before {
   font-size: 15px;
   font-style: italic;
 }
+@media screen and (max-width: 900px) {
+  .project_details {
+    padding: 0;
+    margin-top: 30px;
+  }
+}
 
 .project_2 {
   display: flex;
@@ -583,6 +613,20 @@ nav li:hover a::before {
 }
 .project_2 img {
   box-shadow: 260px -57px #7E5AFF;
+}
+@media screen and (max-width: 900px) {
+  .project_2 img {
+    box-shadow: -10px -10px #7E5AFF;
+  }
+}
+@media screen and (max-width: 900px) {
+  .project_2 {
+    flex-direction: column-reverse;
+    gap: 20px;
+    align-items: center;
+    text-align: center;
+    padding-top: 40px;
+  }
 }
 
 #news {
@@ -612,6 +656,11 @@ nav li:hover a::before {
   max-width: 327px;
   padding-top: 135px;
   text-align: center;
+}
+@media screen and (max-width: 900px) {
+  .news_section_content .news_title {
+    padding-top: 40px;
+  }
 }
 .news_section_content .news_title:before {
   content: "";
@@ -694,7 +743,6 @@ nav li:hover a::before {
 .article_details {
   width: 100%;
   max-width: 370px;
-  height: 514px;
   display: flex;
   flex-direction: column;
   align-items: center;
